tests/rename/should_fail/T14225.script
import qualified Data.Maybe as M
M.fromJusr
